8334482: Shenandoah: Deadlock when safepoint is pending during nmethods iteration

Backport-of: 2aeb12ec03944c777d617d0be48982fd225b16e7